# pendulum

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Doxyfile  LICENSE  README.md  design.md  github-actions.sh  travis.sh
pendulum/: CMakeLists.txt  package.xml
pendulum_bringup/: CMakeLists.txt  package.xml
pendulum_bringup/config/: pendulum.rviz
pendulum_bringup/launch/: controller_bringup.launch.py  driver_bringup.launch.py  pendulum.urdf  pendulum_bringup.launch.py  pendulum_bringup_rviz.launch.py  pendulum_trace.launch.py  pendulum_trace_memory.launch.py  robot_state_publisher_bringup.launch.py  rviz.launch.py
pendulum_bringup/param/: pendulum.param.yaml
pendulum_bringup/params/: pendulum.param.yaml  pendulum_rt_settings.param.yaml
pendulum_bringup/rviz/: pendulum.rviz
pendulum_controller/: CMakeLists.txt  package.xml
pendulum_controller/include/pendulum_controller/: Controller.h  PIDController.hpp  controller.h  pendulum_controller.hpp  pendulum_controller_node.hpp  pid_controller.hpp  visibility_control.hpp
pendulum_controller/param/: test.param.yaml
pendulum_controller/params/: test.param.yaml
pendulum_controller/pendulum_controller/: CMakeLists.txt  package.xml
pendulum_controller/pendulum_controller_node/: CMakeLists.txt  package.xml
pendulum_controller/pendulum_controller_node/src/: pendulum_controller_node.cpp
pendulum_controller/pendulum_controller_node/test/: test_pendulum_controller.cpp
pendulum_controller/pendulum_controllers/: CMakeLists.txt  package.xml
pendulum_controller/pendulum_controllers/src/: full_state_feedback_controller.cpp
pendulum_controller/src/: PIDController.cpp  pendulum_controller.cpp  pendulum_controller_node.cpp  pendulum_controller_node_main.cpp
pendulum_controller/test/: pendulum_controller_autostart.test.py  pendulum_controller_lifecycle.test.py  pid_controller.hpp  test_basics.cpp  test_constructors.cpp  test_controller.cpp  test_pendulum_controller.cpp  test_pendulum_controller_node.cpp
pendulum_demo/: CMakeLists.txt  README.md  package.xml
pendulum_demo/include/pendulum_demo/: pendulum_demo_settings.hpp
pendulum_demo/params/: test.param.yaml
pendulum_demo/scripts/: activate_pendulum.bash  deactivate_pendulum.bash  move_pendulum.bash
pendulum_demo/src/: pendulum_controller_standalone.cpp  pendulum_demo.cpp  pendulum_demo_waitset.cpp  pendulum_driver_standalone.cpp  pendulum_manual_composition.cpp  pendulum_motor_standalone.cpp
pendulum_driver/: CMakeLists.txt  package.xml
pendulum_driver/include/pendulum_driver/: pendulum_driver.hpp  pendulum_driver_node.hpp  runge_kutta.hpp  visibility_control.hpp
pendulum_driver/params/: test.param.yaml
pendulum_driver/pendulum_driver/: CMakeLists.txt  package.xml
pendulum_driver/pendulum_driver/src/: pendulum_driver_node.cpp
pendulum_driver/pendulum_simulation/: CMakeLists.txt  package.xml
pendulum_driver/pendulum_simulation/src/: pendulum_simulation.cpp
pendulum_driver/src/: pendulum_driver.cpp  pendulum_driver_config.cpp  pendulum_driver_node.cpp  pendulum_driver_node_main.cpp
pendulum_driver/test/: pendulum_driver_autostart.test.py  pendulum_driver_lifecycle.test.py  test_config.cpp  test_pendulum_driver.cpp  test_pendulum_driver_node.cpp
pendulum_hardware/pendulum_simulation/: CMakeLists.txt  package.xml
pendulum_hardware/pendulum_simulation/src/: pendulum_simulation.cpp
pendulum_manager/: CMakeLists.txt  package.xml
pendulum_manager/include/pendulum_manager/: lifecycle_service_client.hpp  pendulum_node_manager.hpp
pendulum_manager/src/: lifecycle_service_client.cpp  pendulum_manager.cpp  pendulum_node_manager.cpp
pendulum_motor/: CHANGELOG.rst  CMakeLists.txt  package.xml
pendulum_motor/include/pendulum_controller/: motor.h  motor_sim.hpp  pendulum_motor_node.hpp
pendulum_motor/include/pendulum_motor/: pendulum_motor.hpp  pendulum_motor_node.hpp  simple_pendulum_sim.hpp
pendulum_motor/pendulum_motor_driver/: CMakeLists.txt  package.xml
pendulum_motor/pendulum_motor_driver/test/: test_pendulum_motor.cpp
pendulum_motor/pendulum_motor_node/: CMakeLists.txt  package.xml
pendulum_motor/pendulum_motor_node/src/: pendulum_motor_node.cpp
pendulum_motor/pendulum_motor_node/test/: test_pendulum_motor.cpp
pendulum_motor/pendulum_simulation/: CMakeLists.txt  package.xml
pendulum_motor/src/: pendulum_motor_node.cpp
pendulum_motor/test/: simple_pendulum_sim.hpp  test_pendulum_motor.cpp
pendulum_motor_base/: CMakeLists.txt
pendulum_motor_base/include/pendulum_controller/: pendulum_motor_base.hpp
pendulum_motor_base/src/: pendulum_motor_base.cpp
pendulum_msgs_v2/: CMakeLists.txt  package.xml
pendulum_msgs_v2/msg/: ControllerStats.msg  PendulumCommand.msg  PendulumStats.msg  Rusage.msg  TimerStats.msg  TopicStats.msg
pendulum_state_publisher/: CMakeLists.txt  package.xml  pendulum_state_publisher.cpp
pendulum_teleop/: CMakeLists.txt  package.xml
pendulum_teleop/include/pendulum_teleop/: lifecycle_service_client.hpp  pendulum_manager.hpp
pendulum_teleop/src/: lifecycle_service_client.cpp  pendulum_manager.cpp  pendulum_teleop.cpp
pendulum_test/: CMakeLists.txt  package.xml
pendulum_test/src/: pendulum_manual_composition.cpp  simple_pendulum_sim.hpp
pendulum_tests/: CMakeLists.txt  package.xml
pendulum_tests/params/: test.param.yaml  test_autostart.param.yaml
pendulum_tests/test/: pendulum_demo_autostart.test.py  pendulum_demo_lifecycle.test.py  test_pendulum_memory_allocations.cpp
pendulum_tools/: CMakeLists.txt  package.xml
pendulum_tools/include/pendulum_tools/: jitter_tracker.hpp  lifecycle_autostart.hpp  memory_lock.hpp  process_settings.hpp  resource_usage.hpp  rt_thread.hpp  statistics_tracker.hpp  timing_analyzer.hpp
pendulum_tools/src/: jitter_tracker.cpp  memory_lock.cpp  rt_thread.cpp  timing_analyzer.cpp
pendulum_utils/: CMakeLists.txt  package.xml
pendulum_utils/include/pendulum_utils/: RealtimeObject.hpp  lifecycle_autostart.hpp  memory_lock.hpp  pendulum_data.hpp  periodic_task.hpp  rt_thread.hpp  (+4 more)
pendulum_utils/src/: memory_lock.cpp  rt_thread.cpp  statistics.cpp
(+62 files in other folders)
