<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pendulum</name>
  <version>0.0.1</version>
  <description>mete-package to build ros2realtime/pendulum packages</description>
  <maintainer email="lander.usategui@gmail.com">Lander Usategui</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pendulum2_msgs</depend>
  <depend>pendulum_bringup</depend>
  <depend>pendulum_controller</depend>
  <depend>pendulum_demo</depend>
  <depend>pendulum_driver</depend>
  <depend>pendulum_utils</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
