<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pendulum_demo</name>
  <version>0.7.6</version>
  <description>Package containing demos for lifecycle implementation</description>
  <maintainer email="karsten@osrfoundation.org">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pendulum_motor_node</build_depend>
  <build_depend>pendulum_motor_driver</build_depend>
  <build_depend>pendulum_controllers</build_depend>
  <build_depend>pendulum_controller_node</build_depend>
  <build_depend>rttest</build_depend>
  <build_depend>pendulum_msgs_v2</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>osrf_testing_tools_cpp</build_depend>
  <build_depend>tlsf_cpp</build_depend>

  <exec_depend>rttest</exec_depend>
  <exec_depend>pendulum_msgs_v2</exec_depend>
  <exec_depend>pendulum_motor_node</exec_depend>
  <exec_depend>pendulum_motor_driver</exec_depend>
  <exec_depend>pendulum_controllers</exec_depend>
  <exec_depend>pendulum_controller_node</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
