<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pendulum_demo</name>
  <version>0.0.1</version>
  <description>Package containing demos for pendulum implementation</description>
  <maintainer email="carlos.svic@gmail.com">Carlos San Vicente</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pendulum_driver</build_depend>
  <build_depend>pendulum_controller</build_depend>

  <exec_depend>ros2run</exec_depend>
  <exec_depend>pendulum_driver</exec_depend>
  <exec_depend>pendulum_controller</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
