<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pendulum_test</name>
  <version>0.7.6</version>
  <description>Package containing demos for lifecycle implementation</description>
  <maintainer email="karsten@osrfoundation.org">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pendulum_motor_node</build_depend>
  <build_depend>pendulum_motor_driver</build_depend>
  <build_depend>pendulum_controller</build_depend>
  <build_depend>pendulum_controller_node</build_depend>
  <build_depend>pendulum_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>pendulum_msgs</exec_depend>
  <exec_depend>pendulum_motor_node</exec_depend>
  <exec_depend>pendulum_motor_driver</exec_depend>
  <exec_depend>pendulum_controller</exec_depend>
  <exec_depend>pendulum_controller_node</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
